# UV-agentic-project-repo-template

./: .coveragerc  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  architecture.md  ci.yml  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codespaces/: prebuild.yml
.github/workflows/: ci.yml  e2e.yml
docs/: CONTRIBUTING.md  README.md  architecture.md  contributing.md  index.md
scripts/: bootstrap.sh
src/: __init__.py
src/agentic_core/: __init__.py  logging_config.py
src/sample_agent/: __init__.py  cli.py  config.py
src/uv_agentic/: __init__.py  cli.py  logging_config.py  plan_graph.py  state.py  state_schemas.py
src/uv_agentic/agents/: developer_agent.py
tests/: conftest.py  test_basic.py  test_battery_smoke.py  test_cli.py  test_state_schemas.py
