[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uv-agentic"
version = "0.1.0"
description = "Sample agent package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
]
authors = [
    { name = "Umbra Versa", email = "admin@umbraversa.com" },
]

[project.scripts]
uv-agentic = "uv_agentic.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pre-commit",
]

[tool.hatch.envs.default.scripts]
dev = "python -m uv_agentic.cli"
test = "pytest tests"

[tool.setuptools]
packages = ["uv_agentic"]
package-dir = {"" = "src"}