[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-agent"
version = "0.1.0"
description = "Sample agent package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.6",
]
authors = [
    { name = "Umbra Versa", email = "admin@umbraversa.com" },
]

[project.scripts]
sample-agent = "sample_agent.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pre-commit",
]

[tool.hatch.envs.default.scripts]
dev = "python -m sample_agent.cli"
test = "pytest tests"

[tool.setuptools]
packages = ["sample_agent", "uv_agentic"]
package-dir = {"" = "src"}