[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-template"
version = "0.1.0"
description = "Agentic development template powered by LangGraph & MCP"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Framework :: LangChain",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31",
    "structlog>=23",
    "langsmith>=0.0.65",
    "pydantic>=2.6",
]
authors = [
    { name = "Open Source Community" },
]

[project.scripts]
sample-agent = "sample_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff", "mypy", "pre-commit"]
docs = ["mkdocs>=1.6", "mkdocs-material"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pre-commit",
]

[tool.hatch.envs.default.scripts]
dev = "python -m sample_agent.cli"
test = "pytest tests"

[tool.setuptools]
packages = ["sample_agent", "agentic_core"]
package-dir = {"" = "src"}

[tool.semantic_release]
branch = "main"
package = "agentic_core"
